--- a/style.css
+++ b/style.css
@@ -4,6 +4,15 @@ body {
     padding: 0;
     flex-direction: column;
     min-height: 100vh;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+img {
+    display: block;
+    max-width: 400px;
+    height: 350px;
+    padding: 1rem;
+    display: flex;
 }
 
 header {
@@ -52,7 +61,27 @@ h1 {
 }
 
 p { 
-    text-size-adjust: 5rem;
+    text-size-adjust: 10rem;
+    padding: 3rem;
+    display: flex;
+    font-size: 1.5rem;
+    align-items: center;
+}
+
+.p2 {
+    display: flex;
+    justify-content: center;
     padding: 1rem;
 }
 
+.home-img {
+    min-width: 500px;
+    height: 450px;
+    border-radius: 50%;
+}
+
+.flex {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
